Updates on index file

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li>Tea: 20 EGP</li>
                 <li>Espresso: 100 EGP</li>
                 <li>Iced Coffe: 30 EGP</li>
-                <li>Fresh Orange Juice: 60 EGP</li>
+                <li>Fresh Orange Juice: 70 EGP</li>
                 <li>Strawberry Smoothie: 50 EGP</li>
             </ul> 
         <div class="menu">
@@ -38,7 +38,7 @@
     </div>
 
         <div class="feedback">
-            <h2>Give us Your Feedback To improve The Servise, Please</h2>
+            <h2>Give us your feedback To improve our servise, Please</h2>
             <form onsubmit="showMessage(event)">
                 <textarea placeholder="Write your feedback..." required></textarea><br>
                 <button type="submit">Click Here, Please</button>
